# cheapfinderbackend

./: README.md  pyproject.toml
backend/: settings.py
